[package]
name = "claire"
version = "0.1.0"
authors = ["Tahir Bulbrook <t@hir.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
tokio = { version = "0.2", features = ["macros"] }
rusoto_core = "0.44"
rusoto_s3 = "0.44"
rusoto_ec2 = "0.44"
chrono = "0.4"
failure = "0.1"
itertools = "0.9"