[package]
name = "claire"
version = "0.1.0"
authors = ["Tahir Bulbrook <t@hir.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
tokio = { version = "0.2", features = ["macros"] }
rusoto_core = "0.45"
rusoto_s3 = "0.45"
rusoto_ec2 = "0.45"
rusoto_stepfunctions = {version = "0.45", features = ["serialize_structs"]}
rusoto_lambda = "0.45"
rusoto_iam = "0.45"
chrono = "0.4"
anyhow = "1.0"
serde_json = "1.0"
serde = "1.0"
bytes = "0.5"
log = "0.4"
env_logger = "0.7"
futures = "0.3"