[package]
name = "payload"
version = "0.1.0"
authors = ["Tahir Bulbrook <t@hir.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
walkdir = "2"
log = "0.4"
env_logger = "0.7"